--- a/RocketTrackReceiver/data/tracking.css
+++ b/RocketTrackReceiver/data/tracking.css
@@ -3,3 +3,21 @@ canvas
 {
 	color: red;
 }
+
+.kmlbutton
+{
+	padding: 10px 10px;
+	width: 300px;
+	height: 50px;
+	font-size: 30px;
+	border-radius: 15px;
+}
+
+.menubuttons
+{
+	width: 500px;
+	height: 100px;
+	font-size: 40px;
+	border-radius: 15px;
+}
+
