--- a/RocketTrackReceiver/data/telemetry.css
+++ b/RocketTrackReceiver/data/telemetry.css
@@ -1,16 +1,12 @@
-h1
-{
-	height: 5%;
-	width: 100%;
-	text-align: center;
-}
+
+@import "overall.css";
 
 .datasection
 {
 	width: 80%;
 	height: 70%;
 	text-align: center;
-	font-size: 25px;
+	font-size: 48px;
 	margin: auto;
 	border: 5px solid;
 }
@@ -24,20 +20,5 @@ h1
 .datavalue
 {
 	border: 3px solid;
-}
-
-.buttonsection
-{
-	padding-top: 25px;
-	height: 20%;
-	width: 100%;
-	text-align: center;
-}
-
-.menubuttons
-{
-	width: 300px;
-	font-size: 30px;
-	border-radius: 15px;
 }
 
