--- a/RocketTrackReceiver/data/tracking.css
+++ b/RocketTrackReceiver/data/tracking.css
@@ -1,23 +1,10 @@
 
+@import url("overall.css");
+
 canvas
 {
+	width: 1000px;
+	height: 1000px;
 	color: red;
-}
-
-.kmlbutton
-{
-	padding: 10px 10px;
-	width: 300px;
-	height: 50px;
-	font-size: 30px;
-	border-radius: 15px;
-}
-
-.menubuttons
-{
-	width: 500px;
-	height: 100px;
-	font-size: 40px;
-	border-radius: 15px;
 }
 
