--- a/RocketTrackReceiver/data/tracking.css
+++ b/RocketTrackReceiver/data/tracking.css
@@ -3,8 +3,14 @@
 
 canvas
 {
+/*
 	width: 1000px;
 	height: 1000px;
+*/
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
 	color: red;
 }
 
