--- a/RocketTrackReceiver/data/index.css
+++ b/RocketTrackReceiver/data/index.css
@@ -1,30 +1,47 @@
 
 h1
 {
-	height: 5%;
+	font-size: 100px;
 	width: 100%;
 	text-align: center;
 }
 
 #logo
 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
 }
 
 .buttonsection
 {
-	padding-top: 25px;
+	padding-top: 100px;
 	width: 100%;
 	text-align: center;
 }
 
-.menubuttons
+.menubutton
 {
-	width: 300px;
-	font-size: 20px;
-	border-radius: 15px;
+	width: 350px;
+	font-size: 60px;
+	border-radius: 25px;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.bigbutton
+{
+	width: 700px;
+	font-size: 60px;
+	border-radius: 25px;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	background-color: red;
+	color: white;
 }
 
