--- a/RocketTrackReceiver/data/index.css
+++ b/RocketTrackReceiver/data/index.css
@@ -1,10 +1,5 @@
 
-h1
-{
-	font-size: 100px;
-	width: 100%;
-	text-align: center;
-}
+@import "overall.css";
 
 #logo
 {
@@ -12,36 +7,5 @@ h1
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
-}
-
-.buttonsection
-{
-	padding-top: 100px;
-	width: 100%;
-	text-align: center;
-}
-
-.menubutton
-{
-	width: 350px;
-	font-size: 60px;
-	border-radius: 25px;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-}
-
-.bigbutton
-{
-	width: 700px;
-	font-size: 60px;
-	border-radius: 25px;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	background-color: red;
-	color: white;
 }
 
