--- a/RocketTrackReceiver/data/telemetry.css
+++ b/RocketTrackReceiver/data/telemetry.css
@@ -4,15 +4,16 @@
 .datasection
 {
 	width: 80%;
-	height: 70%;
 	text-align: center;
-	font-size: 48px;
+	font-size: 50px;
 	margin: auto;
 	border: 5px solid;
 }
 
 .datatag
 {
+	padding-top: 10px;
+	padding-bottom: 10px;
 	border: 3px solid;
 	font-weight: bold;
 }
