--- a/RocketTrackReceiver/data/mag_calibration.css
+++ b/RocketTrackReceiver/data/mag_calibration.css
@@ -16,7 +16,6 @@
 .A_matrix
 {
     padding-top: 25px;
-    border-radius: 15px;
     padding-bottom: 25px;
 }
 
@@ -28,8 +27,20 @@
 
 input
 {
-    width: 6;
+    width: 8em;
+    font-size: 24px;
+/*
     size: 6;
     max_length: 6;
     min_length: 6;
+*/ 
+}
+
+div
+{
+    border-radius: 15px;
+    border-style: solid;
+    width: 80%;
+    margin-top: 25px;
+    margin-bottom: 25px;    
 }
