--- a/RocketTrackReceiver/data/overall.css
+++ b/RocketTrackReceiver/data/overall.css
@@ -23,3 +23,34 @@ h1
 	border-radius: 15px;
 }
 
+.freqlabel
+{
+	padding-top: 25px;
+	padding-bottom: 25px;
+	font-size: 48px;
+}
+
+.bwlabel
+{
+	font-size: 36px;
+}
+
+.sflabel
+{
+	font-size: 36px;
+}
+
+.crlabel
+{
+	font-size: 36px;
+}
+
+.optionsgroup
+{
+	margin-top: 25px;
+	margin-bottom: 25px;    
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 15px;
+	width: 80%;
+}
