This now reads nearly all its parameters from non-volatile store.  It also supports setting the receive channel from the web user interface to one of 6 channels.  A lot of the stuff to be able to adjust the lora parameters from the web user interface is done but not tested as yet.

--- a/RocketTrackReceiver/data/overall.css
+++ b/RocketTrackReceiver/data/overall.css
@@ -23,6 +23,13 @@ h1
 	border-radius: 15px;
 }
 
+input[type='radio']
+{
+	height: 64px;
+	width: 64px;
+	vertical-align: middle;
+}
+
 .freqlabel
 {
 	padding-top: 25px;
