--- a/RocketTrackReceiver/data/overall.css
+++ b/RocketTrackReceiver/data/overall.css
@@ -13,6 +13,14 @@ h2
 	text-align: center;
 }
 
+#logo
+{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+}
+
 .buttonsection
 {
 	padding-top: 25px;
@@ -23,8 +31,8 @@ h2
 
 .menubuttons
 {
-	width: 400px;
-	height: 128px;
+	width: 85%;
+	height: 15%;
 	font-size: 48px;
 	border-radius: 15px;
 }
@@ -67,3 +75,4 @@ input[type='radio']
 	border-radius: 15px;
 	width: 80%;
 }
+
