--- a/RocketTrackReceiver/data/overall.css
+++ b/RocketTrackReceiver/data/overall.css
@@ -13,6 +13,11 @@ h2
 	text-align: center;
 }
 
+td
+{
+	text-align: center;
+}
+
 #logo
 {
 	display: block;
@@ -29,12 +34,30 @@ h2
 	text-align: center;
 }
 
+.selectbuttonsection
+{
+	padding-top: 25px;
+	height: 30%;
+	width: 90%;
+	margin: auto;
+}
+
 .menubuttons
 {
 	width: 85%;
 	height: 15%;
 	font-size: 48px;
 	border-radius: 15px;
+}
+
+.selectmenubuttons
+{
+	width: 80%;
+	font-size: 64px;
+	border-radius: 15px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	text-align: center;
 }
 
 input[type='radio']
@@ -65,6 +88,16 @@ input[type='radio']
 {
 	font-size: 36px;
 }
+
+#beacon_buttons
+{
+	margin-top: 25px;
+	margin-bottom: 25px;    
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 15px;
+}
+
 
 .optionsgroup
 {
